Fix: Hero background image path for GitHub Pages
- Changed absolute path /images/hero-bg.jpg to relative ../images/hero-bg.jpg
- Updated .gitignore to include dist/ folder for GitHub Pages
- Fixed CSS in both source and dist directories

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ pids
 
 # Compiled binary addons
 build
-dist/
+# dist/ - Commented out for GitHub Pages deployment
 
 # dotenv environment variables file
 .env
