--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,10 @@ pids
 
 # Compiled binary addons
 build
-# dist/ - Commented out for GitHub Pages deployment
+dist/
+
+# GitHub Pages deployment folder (NOT ignored - committed to repo)
+# github/
 
 # dotenv environment variables file
 .env
