RENAME: github/ → docs/ pour GitHub Pages
✨ Adaptation au système natif de GitHub Pages

CHANGEMENTS:
- github/ renommé en docs/ (seul dossier supporté par GitHub Pages)
- build-deploy.sh mis à jour pour générer docs/
- .gitignore mis à jour (dist/ exclu, docs/ inclus)
- URLs corrigées: salahkhalfi.github.io/Speedex-website

VERIFICATION:
✅ docs/index.html → canonical: salahkhalfi.github.io/Speedex-website
✅ dist/index.html → canonical: extincteurspeedex.ca

PROCHAINE ÉTAPE:
Configurer GitHub Pages → Settings → Pages → Folder: /docs

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ build
 dist/
 
 # GitHub Pages deployment folder (NOT ignored - committed to repo)
-# github/
+# docs/
 
 # dotenv environment variables file
 .env
